--- a/src/settings.html
+++ b/src/settings.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>FT Capture Settings</title>
+    <!-- Font Awesome Icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         * {
             margin: 0;
@@ -13,7 +15,7 @@
         html, body {
             height: 100vh;
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: linear-gradient(135deg, #00b894 0%, #00cec9 100%);
             overflow: hidden;
         }
 
@@ -24,7 +26,7 @@
         }
 
         .header {
-            background: linear-gradient(135deg, #4CAF50 0%, #2E7D32 100%);
+            background: linear-gradient(135deg, #00b894 0%, #00a085 100%);
             color: white;
             padding: 15px;
             text-align: center;
@@ -49,6 +51,7 @@
             justify-content: center;
             font-size: 24px;
             box-shadow: 0 4px 12px rgba(0,0,0,0.3);
+            color: #00b894;
         }
 
         .app-title {
@@ -74,7 +77,7 @@
             background: rgba(255,255,255,0.95);
             backdrop-filter: blur(20px);
             border-right: 1px solid rgba(0,0,0,0.1);
-            padding: 20px;
+            padding: 32px;
             overflow-y: auto;
             flex-shrink: 0;
         }
@@ -83,7 +86,7 @@
             width: 50%;
             background: rgba(255,255,255,0.9);
             backdrop-filter: blur(20px);
-            padding: 20px;
+            padding: 32px;
             overflow-y: auto;
         }
 
@@ -92,7 +95,7 @@
         }
 
         .section h3 {
-            color: #2E7D32;
+            color: #00a085;
             font-size: 18px;
             font-weight: 600;
             margin-bottom: 12px;
@@ -105,7 +108,7 @@
             display: flex;
             flex-direction: column;
             padding: 15px;
-            border: 1px solid #e0e0e0;
+            border: 1px solid #dfe6e9;
             border-radius: 12px;
             margin-bottom: 12px;
             margin-top: 2px;
@@ -116,7 +119,7 @@
 
         .macro-item:hover {
             box-shadow: 0 8px 24px rgba(0,0,0,0.15);
-            border-color: #4CAF50;
+            border-color: #00b894;
             transform: translateY(-2px);
         }
 
@@ -166,12 +169,12 @@
         }
 
         .area-assigned {
-            color: #4CAF50;
+            color: #00b894;
             font-weight: 600;
         }
 
         .area-pending {
-            color: #FF9800;
+            color: #81ecec;
             font-weight: 600;
         }
 
@@ -194,69 +197,71 @@
             display: inline-flex;
             align-items: center;
             gap: 4px;
-            min-width: 80px;
+            min-width: 90px;
             justify-content: center;
+            flex: 1;
+            max-width: 110px;
         }
 
         .btn-primary {
-            background: #4CAF50;
+            background: #00b894;
             color: white;
-            box-shadow: 0 2px 8px rgba(76, 175, 80, 0.3);
+            box-shadow: 0 2px 8px rgba(0, 184, 148, 0.3);
         }
 
         .btn-primary:hover {
-            background: #45a049;
+            background: #00a085;
             transform: translateY(-1px);
-            box-shadow: 0 4px 12px rgba(76, 175, 80, 0.4);
+            box-shadow: 0 4px 12px rgba(0, 184, 148, 0.4);
         }
 
         .btn-secondary {
-            background: #2196F3;
+            background: #00cec9;
             color: white;
-            box-shadow: 0 2px 8px rgba(33, 150, 243, 0.3);
+            box-shadow: 0 2px 8px rgba(0, 206, 201, 0.3);
         }
 
         .btn-secondary:hover {
-            background: #1976D2;
+            background: #00b7b3;
             transform: translateY(-1px);
-            box-shadow: 0 4px 12px rgba(33, 150, 243, 0.4);
+            box-shadow: 0 4px 12px rgba(0, 206, 201, 0.4);
         }
 
         .btn-warning {
-            background: #FF9800;
-            color: white;
-            box-shadow: 0 2px 8px rgba(255, 152, 0, 0.3);
+            background: #81ecec;
+            color: #333;
+            box-shadow: 0 2px 8px rgba(129, 236, 236, 0.3);
         }
 
         .btn-warning:hover {
-            background: #F57C00;
+            background: #6bc5c5;
             transform: translateY(-1px);
-            box-shadow: 0 4px 12px rgba(255, 152, 0, 0.4);
+            box-shadow: 0 4px 12px rgba(129, 236, 236, 0.4);
         }
 
         .btn-danger {
-            background: #F44336;
-            color: white;
-            box-shadow: 0 2px 8px rgba(244, 67, 54, 0.3);
+            background: #dfe6e9;
+            color: #333;
+            box-shadow: 0 2px 8px rgba(223, 230, 233, 0.3);
         }
 
         .btn-danger:hover {
-            background: #D32F2F;
+            background: #c8d4da;
             transform: translateY(-1px);
-            box-shadow: 0 4px 12px rgba(244, 67, 54, 0.4);
+            box-shadow: 0 4px 12px rgba(223, 230, 233, 0.4);
         }
 
         .btn-ghost {
             background: rgba(255,255,255,0.9);
             color: #666;
-            border: 2px solid #e0e0e0;
+            border: 2px solid #dfe6e9;
             box-shadow: 0 2px 8px rgba(0,0,0,0.05);
         }
 
         .btn-ghost:hover {
             background: white;
-            border-color: #4CAF50;
-            color: #4CAF50;
+            border-color: #00b894;
+            color: #00b894;
             transform: translateY(-1px);
             box-shadow: 0 4px 12px rgba(0,0,0,0.1);
         }
@@ -264,7 +269,7 @@
         .add-macro-btn {
             width: 100%;
             padding: 15px;
-            background: linear-gradient(135deg, #4CAF50 0%, #45a049 100%);
+            background: linear-gradient(135deg, #00b894 0%, #00a085 100%);
             color: white;
             border: none;
             border-radius: 12px;
@@ -277,7 +282,12 @@
             align-items: center;
             justify-content: center;
             gap: 8px;
-            box-shadow: 0 3px 12px rgba(76, 175, 80, 0.3);
+            box-shadow: 0 3px 12px rgba(0, 184, 148, 0.3);
+        }
+
+        .add-macro-btn:hover {
+            transform: translateY(-3px);
+            box-shadow: 0 8px 24px rgba(0, 184, 148, 0.4);
         }
 
         .settings-card {
@@ -293,7 +303,7 @@
             align-items: center;
             justify-content: space-between;
             padding: 15px 0;
-            border-bottom: 1px solid #f0f0f0;
+            border-bottom: 1px solid #dfe6e9;
         }
 
         .settings-item:last-child {
@@ -309,7 +319,7 @@
         .save-path-input {
             flex: 1;
             padding: 10px 12px;
-            border: 2px solid #e0e0e0;
+            border: 2px solid #dfe6e9;
             border-radius: 6px;
             margin-right: 10px;
             font-size: 14px;
@@ -318,8 +328,8 @@
 
         .save-path-input:focus {
             outline: none;
-            border-color: #4CAF50;
-            box-shadow: 0 0 0 3px rgba(76, 175, 80, 0.1);
+            border-color: #00b894;
+            box-shadow: 0 0 0 3px rgba(0, 184, 148, 0.1);
         }
 
         .modal {
@@ -357,7 +367,7 @@
         }
 
         .modal h3 {
-            color: #2E7D32;
+            color: #00a085;
             margin-bottom: 20px;
             text-align: center;
             font-size: 22px;
@@ -377,7 +387,7 @@
         .form-group input {
             width: 100%;
             padding: 12px 16px;
-            border: 2px solid #e0e0e0;
+            border: 2px solid #dfe6e9;
             border-radius: 8px;
             font-size: 14px;
             transition: border-color 0.2s ease;
@@ -385,8 +395,8 @@
 
         .form-group input:focus {
             outline: none;
-            border-color: #4CAF50;
-            box-shadow: 0 0 0 3px rgba(76, 175, 80, 0.1);
+            border-color: #00b894;
+            box-shadow: 0 0 0 3px rgba(0, 184, 148, 0.1);
         }
 
         .color-group {
@@ -398,7 +408,7 @@
         .color-picker {
             width: 60px;
             height: 50px;
-            border: 2px solid #e0e0e0;
+            border: 2px solid #dfe6e9;
             border-radius: 8px;
             cursor: pointer;
             background: none;
@@ -426,7 +436,7 @@
 
         .color-preset.selected {
             border-color: #333;
-            box-shadow: 0 0 0 2px rgba(76, 175, 80, 0.3);
+            box-shadow: 0 0 0 2px rgba(0, 184, 148, 0.3);
         }
 
         .modal-actions {
@@ -443,8 +453,8 @@
         }
 
         .hotkey-input.listening {
-            background: #e3f2fd !important;
-            border-color: #2196F3 !important;
+            background: #e3f8f6 !important;
+            border-color: #00cec9 !important;
         }
 
         .empty-state {
@@ -457,6 +467,7 @@
             font-size: 48px;
             margin-bottom: 16px;
             opacity: 0.5;
+            color: #00b894;
         }
 
         .scrollable {
@@ -481,13 +492,37 @@
         .scrollable::-webkit-scrollbar-thumb:hover {
             background: #a8a8a8;
         }
+
+        .stats-grid {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            gap: 20px;
+        }
+
+        .stat-item {
+            text-align: center;
+            padding: 20px;
+            background: #f8fffe;
+            border-radius: 12px;
+            border: 1px solid rgba(0, 184, 148, 0.1);
+        }
+
+        .theme-sample {
+            display: flex;
+            align-items: center;
+            gap: 8px;
+            padding: 12px;
+            background: #f8fffe;
+            border-radius: 8px;
+            border: 1px solid rgba(0, 184, 148, 0.1);
+        }
     </style>
 </head>
 <body>
     <div class="app-container">
         <div class="header">
             <div class="header-content">
-                <div class="app-icon">📸</div>
+                <div class="app-icon"><i class="fas fa-camera"></i></div>
                 <div>
                     <div class="app-title">FT Capture</div>
                     <div class="app-subtitle">Professional Screenshot Tool</div>
@@ -498,13 +533,13 @@
         <div class="main-content">
             <div class="content-area">
                 <div class="section">
-                    <h3>⚙️ General Settings</h3>
+                    <h3><i class="fas fa-cog"></i> General Settings</h3>
                     <div class="settings-card">
                         <div class="settings-item">
                             <span class="settings-label">Save Path:</span>
                             <div style="display: flex; flex: 1; margin-left: 20px;">
                                 <input type="text" id="save-path" class="save-path-input" placeholder="Default: Desktop">
-                                <button class="btn btn-secondary" onclick="browseSavePath()">📁 Browse</button>
+                                <button class="btn btn-secondary" onclick="browseSavePath()"><i class="fas fa-folder"></i> Browse</button>
                             </div>
                         </div>
                         <div class="settings-item">
@@ -515,15 +550,15 @@
                 </div>
 
                 <div class="section">
-                    <h3>📊 Statistics</h3>
+                    <h3><i class="fas fa-chart-bar"></i> Statistics</h3>
                     <div class="settings-card">
-                        <div class="stats-grid" style="display: grid; grid-template-columns: 1fr 1fr; gap: 20px;">
-                            <div class="stat-item" style="text-align: center; padding: 20px; background: #f8f9fa; border-radius: 12px;">
-                                <div style="font-size: 32px; font-weight: 700; color: #4CAF50;" id="total-macros">0</div>
+                        <div class="stats-grid">
+                            <div class="stat-item">
+                                <div style="font-size: 32px; font-weight: 700; color: #00b894;" id="total-macros">0</div>
                                 <div style="font-size: 14px; color: #666; margin-top: 8px;">Total Macros</div>
                             </div>
-                            <div class="stat-item" style="text-align: center; padding: 20px; background: #f8f9fa; border-radius: 12px;">
-                                <div style="font-size: 32px; font-weight: 700; color: #2196F3;" id="ready-macros">0</div>
+                            <div class="stat-item">
+                                <div style="font-size: 32px; font-weight: 700; color: #00cec9;" id="ready-macros">0</div>
                                 <div style="font-size: 14px; color: #666; margin-top: 8px;">Ready to Use</div>
                             </div>
                         </div>
@@ -531,7 +566,7 @@
                 </div>
 
                 <div class="section">
-                    <h3>ℹ️ How to Use</h3>
+                    <h3><i class="fas fa-info-circle"></i> How to Use</h3>
                     <div class="settings-card">
                         <ol style="padding-left: 20px; line-height: 2; font-size: 15px;">
                             <li><strong>Add New Macro</strong> - Create a macro with name, hotkey, and color theme</li>
@@ -544,31 +579,27 @@
                 </div>
 
                 <div class="section">
-                    <h3>🎨 Color Themes</h3>
+                    <h3><i class="fas fa-palette"></i> Color Themes</h3>
                     <div class="settings-card">
                         <p style="margin-bottom: 20px; color: #666; font-size: 15px; line-height: 1.6;">
                             Choose different colors for your macros to easily identify them. Each macro can have its own unique color theme that will be reflected in notifications and indicators.
                         </p>
                         <div class="color-themes" style="display: flex; gap: 12px; flex-wrap: wrap;">
-                            <div class="theme-sample" style="display: flex; align-items: center; gap: 8px; padding: 12px; background: #f8f9fa; border-radius: 8px;">
-                                <div style="width: 20px; height: 20px; background: #4CAF50; border-radius: 4px;"></div>
-                                <span style="font-size: 14px; color: #666;">Green</span>
+                            <div class="theme-sample">
+                                <div style="width: 20px; height: 20px; background: #00b894; border-radius: 4px;"></div>
+                                <span style="font-size: 14px; color: #666;">Primary</span>
                             </div>
-                            <div class="theme-sample" style="display: flex; align-items: center; gap: 8px; padding: 12px; background: #f8f9fa; border-radius: 8px;">
-                                <div style="width: 20px; height: 20px; background: #2196F3; border-radius: 4px;"></div>
-                                <span style="font-size: 14px; color: #666;">Blue</span>
+                            <div class="theme-sample">
+                                <div style="width: 20px; height: 20px; background: #00cec9; border-radius: 4px;"></div>
+                                <span style="font-size: 14px; color: #666;">Secondary</span>
                             </div>
-                            <div class="theme-sample" style="display: flex; align-items: center; gap: 8px; padding: 12px; background: #f8f9fa; border-radius: 8px;">
-                                <div style="width: 20px; height: 20px; background: #FF9800; border-radius: 4px;"></div>
-                                <span style="font-size: 14px; color: #666;">Orange</span>
+                            <div class="theme-sample">
+                                <div style="width: 20px; height: 20px; background: #81ecec; border-radius: 4px;"></div>
+                                <span style="font-size: 14px; color: #666;">Light</span>
                             </div>
-                            <div class="theme-sample" style="display: flex; align-items: center; gap: 8px; padding: 12px; background: #f8f9fa; border-radius: 8px;">
-                                <div style="width: 20px; height: 20px; background: #9C27B0; border-radius: 4px;"></div>
-                                <span style="font-size: 14px; color: #666;">Purple</span>
-                            </div>
-                            <div class="theme-sample" style="display: flex; align-items: center; gap: 8px; padding: 12px; background: #f8f9fa; border-radius: 8px;">
-                                <div style="width: 20px; height: 20px; background: #F44336; border-radius: 4px;"></div>
-                                <span style="font-size: 14px; color: #666;">Red</span>
+                            <div class="theme-sample">
+                                <div style="width: 20px; height: 20px; background: #dfe6e9; border-radius: 4px;"></div>
+                                <span style="font-size: 14px; color: #666;">Neutral</span>
                             </div>
                         </div>
                     </div>
@@ -577,11 +608,11 @@
 
             <div class="sidebar">
                 <button class="add-macro-btn" onclick="showAddMacroModal()">
-                    ➕ Add New Macro
+                    <i class="fas fa-plus"></i> Add New Macro
                 </button>
 
                 <div class="section">
-                    <h3>📋 Your Macros</h3>
+                    <h3><i class="fas fa-list"></i> Your Macros</h3>
                     <div id="macros-list" class="scrollable">
                         <!-- Macros will be populated here -->
                     </div>
@@ -663,7 +694,7 @@
             macrosList.innerHTML = macros.map(macro => `
                 <div class="macro-item">
                     <div class="macro-info">
-                        <div class="macro-color-indicator" style="background: ${macro.color || '#4CAF50'};"></div>
+                        <div class="macro-color-indicator" style="background: ${macro.color || '#00b894'};"></div>
                         <div class="macro-details">
                             <div class="macro-name">${macro.name}</div>
                             <div class="macro-hotkey">${macro.hotkey}</div>
@@ -676,13 +707,13 @@
                         </div>
                     </div>
                     <div class="macro-actions">
-                        <button class="btn btn-ghost" onclick="editMacro('${macro.id}')">✏️ Edit</button>
+                        <button class="btn btn-ghost" onclick="editMacro('${macro.id}')"><i class="fas fa-edit"></i> Edit</button>
                         ${macro.area ?
-                            `<button class="btn btn-warning" onclick="setMacroArea('${macro.id}')">🔄 Change Area</button>` :
-                            `<button class="btn btn-primary" onclick="setMacroArea('${macro.id}')">📍 Set Area</button>`
+                            `<button class="btn btn-warning" onclick="setMacroArea('${macro.id}')"><i class="fas fa-sync-alt"></i> Change</button>` :
+                            `<button class="btn btn-primary" onclick="setMacroArea('${macro.id}')"><i class="fas fa-crosshairs"></i> Set Area</button>`
                         }
-                        <button class="btn btn-secondary" onclick="testMacro('${macro.id}')">🧪 Test</button>
-                        <button class="btn btn-danger" onclick="removeMacro('${macro.id}')">🗑️ Delete</button>
+                        <button class="btn btn-secondary" onclick="testMacro('${macro.id}')"><i class="fas fa-play"></i> Test</button>
+                        <button class="btn btn-danger" onclick="removeMacro('${macro.id}')"><i class="fas fa-trash"></i> Delete</button>
                     </div>
                 </div>
             `).join('');
