Enhance README and settings UI with usage notes and pro tips for improved user experience

--- a/src/settings.html
+++ b/src/settings.html
@@ -82,6 +82,17 @@
                 <div class="section">
                     <h3><i class="fas fa-info-circle"></i> How to Use</h3>
                     <div class="settings-card">
+                        <div style="background: linear-gradient(135deg, #74b9ff 0%, #0984e3 100%); color: white; padding: 16px; border-radius: 8px; margin-bottom: 20px; border-left: 4px solid #0984e3;">
+                            <div style="display: flex; align-items: center; gap: 12px; margin-bottom: 8px;">
+                                <i class="fas fa-lightbulb" style="font-size: 20px;"></i>
+                                <strong style="font-size: 16px;">Pro Tip for Uninterrupted Screenshots</strong>
+                            </div>
+                            <p style="margin: 0; line-height: 1.5; font-size: 14px;">
+                                To prevent this Settings window from appearing during screenshots while working in other apps,
+                                please <strong>minimize</strong> or <strong>close</strong> this window before taking screenshots.
+                                You can always reopen it from the system tray.
+                            </p>
+                        </div>
                         <ol style="padding-left: 20px; line-height: 2; font-size: 15px;">
                             <li><strong>Add New Macro</strong> - Create a macro with name, hotkey, and color theme</li>
                             <li><strong>Assign Area</strong> - Click "Set Area" to visually select screenshot region</li>
